geolog-lang/test/nominal.output
-- tokens
Decl theory (0:6)
AIdent A (7:8)
SKeyword := (9:11)
Block sig (12:15)
Nl (15:16)
End end (16:19)
Nl (19:20)
Nl (20:21)
Decl theory (21:27)
AIdent B (28:29)
SKeyword := (30:32)
Block sig (33:36)
Nl (36:37)
End end (37:40)
Nl (40:41)
Nl (41:42)
Decl def (42:45)
AIdent a (46:47)
SKeyword : (48:49)
AIdent A (50:51)
SKeyword := (52:54)
Block struct (55:61)
Nl (61:62)
End end (62:65)
Nl (65:66)
Nl (66:67)
Decl def (67:70)
AIdent b (71:72)
SKeyword : (73:74)
AIdent B (75:76)
SKeyword := (77:79)
AIdent a (80:81)
Nl (81:82)
Eof (82:82)

-- notation
Decl theory (0:19)
  Infix (7:19)
    Ident A (7:8)
    Keyword := (9:11)
    Block sig (12:19)
Decl theory (21:40)
  Infix (28:40)
    Ident B (28:29)
    Keyword := (30:32)
    Block sig (33:40)
Decl def (42:65)
  Infix (46:65)
    Infix (46:51)
      Ident a (46:47)
      Keyword : (48:49)
      Ident A (50:51)
    Keyword := (52:54)
    Block struct (55:65)
Decl def (67:81)
  Infix (71:81)
    Infix (71:76)
      Ident b (71:72)
      Keyword : (73:74)
      Ident B (75:76)
    Keyword := (77:79)
    Ident a (80:81)

-- elaborated
potential entry named A
type:  Theory
value:  sig
end
potential entry named B
type:  Theory
value:  sig
end
kinetic entry named a
type: A
value: []

-- messages

error[E0200]: synthesized A while expecting B
10 | def b : B := a
10 |              ^
mismatching elements B and A
