geolog-lang/test/nominal.glog
theory A := []

theory B := []

def a : A := []

def b : B := a
